# internationalmoney-backend

./: .env  README.md  alembic.ini  docker-compose.yml  pyproject.toml  quick-start.ps1  quick-start.sh  requirements.txt  stop-stack.ps1  userprofile_pb2_grpc.py
api_gateway/: Dockerfile  config.py  load_balancer.py  main.py  metrics.py
api_gateway/graphql/: __init__.py  transaction_resolvers.py  user_resolvers.py
api_gateway/middleware/: auth.py
api_gateway/rbac/: policy.csv
common/cache/: redis_cache.py
common/db/: session.py
common/db/migrations/: env.py
common/db/migrations/versions/: 0001_initial.py
common/events/: kafka.py
common/observability/: tracing.py
docker/: prometheus.yml
docker/keycloak/: realm-export.json
proto/: __init__.py  banktransaction.proto  banktransaction_pb2.py  banktransaction_pb2_grpc.py  userprofile.proto  userprofile_pb2.py  userprofile_pb2_grpc.py
transaction_service/: Dockerfile  entrypoint.sh  grpc_server.py
transaction_service/app/: models.py  repo.py  schemas.py  service.py
user_service/: Dockerfile  entrypoint.sh  grpc_server.py
user_service/app/: models.py  repo.py  schemas.py  service.py
